--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="music-player">
                 <div class="cover">
-                    <img src="https://github.com/FMROSTOV/FM-/blob/0e4a37bf3ec8fa0bb6cf4e1e1ca1fda406f61e55/bGUmbYHEi0Y.png" alt="">   
+                    <img src="https://github.com/FMROSTOV/rnd.avtoradio/blob/658a7ae863e243aac31c17a4c13abeafdc0a81e9/bGUmbYHEi0Y.png" alt="">   
                 </div>
                 <div class="titre">
                     <h3>Авторадио</h3>
