--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <img src="https://github.com/FMROSTOV/rnd.avtoradio/blob/658a7ae863e243aac31c17a4c13abeafdc0a81e9/bGUmbYHEi0Y.png" alt="">   
                 </div>
                 <div class="titre">
-                    <h3>Авторадио</h3>
-                    <h3>Ростов-на-Дону</h3>
+                    <h3>Авторадио Ростов-на-Дону</h3>
+                    <h3>WhatsApp +7 918 591 104 1</h3>
                     <h1>104.1 FM</h1>
                 </div>
                 <div class="lecteur">
