--- a/index.html
+++ b/index.html
@@ -12,19 +12,78 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Авторадио Ростов-на-Дону</title>
+    <title>Авторадио</title>
 </head>
+
+    <script>
+    <!--Скрипт rds  -->
+    var rds_text0 = "Авторадио Каменск";
+    var rds_text1 = "89.6 FM";
+    var rds_text2 = "Реклама на Авторадио: т.49-0-49 ";
+    var rds_text3 = "";
+    var rds_text_count = 0;
+    function onload() {
+
+
+
+
+        $("#rds_text_count").fadeOut(0);
+
+    if (rds_text_count == 0) {
+    document.getElementById("rds_text_count").innerHTML= rds_text0;
+    $("#rds_text_count").fadeIn(500);
+
+    }else if (rds_text_count == 1) {
+    document.getElementById("rds_text_count").innerHTML= rds_text1;
+    $("#rds_text_count").fadeIn(500);
+    } else if (rds_text_count == 2) {
+        document.getElementById("rds_text_count").innerHTML= rds_text2;
+        $("#rds_text_count").fadeIn(500);
+    }
+
+    else {  var xhr = new XMLHttpRequest();
+        rds_text_count = -1;
+        xhr.open('GET', '/RDS/10303E9500080026.txt', false);
+        xhr.send();
+//alert (xhr.status);
+        if (xhr.status != 200) {
+            // обработать ошибку
+            // alert('Ошибка ' + xhr.status + ': ' + xhr.statusText);
+
+
+        } else {
+            // вывести результат
+            //alert(xhr.responseText);
+           document.getElementById("rds_text_count").innerHTML="За бортом " + xhr.responseText + "°C ";
+            $("#rds_text_count").fadeIn(500);
+        }
+
+
+    }
+    rds_text_count++;
+    //        alert(rds_text_count);
+
+
+
+
+    setTimeout(onload, 5000);
+    }
+
+
+    </script>
+    <!--Конец rds     -->
+
 <body>
     <div class="contain">
         <div class="container">
             <div class="music-player">
                 <div class="cover">
-                    <img src="https://github.com/FMROSTOV/rnd.avtoradio/blob/1f7b70ecd0c8da9a8df7d68c5741c98ec3e3d95c/bGUmbYHEi0Y.png" alt="">   
+                    <img src="https://raw.githubusercontent.com/FMROSTOV/FMRos.github.io/main/cbcbcbb.png" alt="">   
                 </div>
                 <div class="titre">
                     <h3>Авторадио Ростов-на-Дону</h3>
                     <h3>WhatsApp +7 918 591 104 1</h3>
-                    <h1>104.1 FM</h1>
+                    <h1>89.6 FM</h1>
                 </div>
                 <div class="lecteur">
                     <audio style="width: 100%;" class="fc-media">
@@ -33,10 +92,7 @@
                 </div>
             </div>
         </div>
-    </div
-</div>
     </div>
-</div>
 </body>
 </html>
 <!-- partial -->
