--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <script>
     <!--Скрипт rds  -->
-    var rds_text0 = "Авторадио Каменск";
-    var rds_text1 = "89.6 FM";
-    var rds_text2 = "Реклама на Авторадио: т.49-0-49 ";
+    var rds_text0 = "Авторадио Ростов-на-Дону";
+    var rds_text1 = "104.1 FM";
+    var rds_text2 = "Реклама";
     var rds_text3 = "";
     var rds_text_count = 0;
     function onload() {
