--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="music-player">
                 <div class="cover">
-                    <img src="https://raw.githubusercontent.com/FMROSTOV/FMRos.github.io/main/cbcbcbb.png" alt="">   
+                    <img src="https://github.com/FMROSTOV/rnd.avtoradio/blob/d3918bc98fef730dfcc3898bbd2e94b92ec78e8e/bGUmbYHEi0Y.png" alt="">   
                 </div>
                 <div class="titre">
                     <h3>Авторадио Ростов-на-Дону</h3>
