--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="music-player">
                 <div class="cover">
-                    <img src="https://github.com/FMROSTOV/rnd.avtoradio/blob/5f18e31cbb246e528a4d78602450432e3d6c52f6/cbcbcbbw.png" alt="">   
+                    <img src="https://github.com/FMROSTOV/FMRos.github.io/blob/a16369b13df001b975909e87084a7c7b83c2048a/cbcbcbbw.png" alt="">   
                 </div>
                 <div class="titre">
                     <h3>Авторадио Ростов-на-Дону</h3>
