--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Авторадио</title>
   <link rel='stylesheet' href='https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.7/mediaelementplayer.min.css'><link rel="stylesheet" href="./style.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.7/mediaelementplayer.min.css'><link rel="stylesheet" href="https://github.com/FMROSTOV/rnd.avtoradio/blob/934113509365a032746211f914aff6148e734620/style.css">
 
 </head>
 <body>
@@ -14,12 +14,13 @@
     <meta charset="UTF-8">
     <title>Авторадио</title>
 </head>
+
 <body>
     <div class="contain">
         <div class="container">
             <div class="music-player">
                 <div class="cover">
-                    <img src="https://github.com/FMROSTOV/FMRos.github.io/blob/a16369b13df001b975909e87084a7c7b83c2048a/cbcbcbbw.png" alt="">   
+                    <img src="https://github.com/FMROSTOV/rnd.avtoradio/blob/934113509365a032746211f914aff6148e734620/cbcbcbbw.png" alt="">   
                 </div>
                 <div class="titre">
                     <h3>Авторадио Ростов-на-Дону</h3>
@@ -34,6 +35,9 @@
             </div>
         </div>
     </div>
+
+   
+
 </body>
 </html>
 <!-- partial -->
