--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Авторадио</title>
   <link rel='stylesheet' href='https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.7/mediaelementplayer.min.css'><link rel="stylesheet" href="https://github.com/FMROSTOV/rnd.avtoradio/blob/934113509365a032746211f914aff6148e734620/style.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.7/mediaelementplayer.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
