--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="music-player">
                 <div class="cover">
-                    <img src="https://github.com/FMROSTOV/rnd.avtoradio/blob/4e59da81341ae7604b8aad9645ab9625613b1954/Avtoradio_%2528Russia%2529.png" alt="">   
+                    <img src="https://raw.githubusercontent.com/FMROSTOV/rnd.avtoradio/main/rnd.avtoradiologo.png" alt="">   
                 </div>
                 <div class="titre">
                     <h3>Авторадио Ростов-на-Дону</h3>
